KAlarm Change Log

=== Version 3.6.2 (KDE Gear 23.08.2) --- 8 October 2023 ===
* When an alarm is deferred, ensure it's deleted from the archived alarm calendar.
* Fix 'show today' button not showing in date picker when using Breeze icon theme.

=== Version 3.6.1 (KDE Gear 23.08.1) --- 28 August 2023 ===
* Don't warn about not providing high accuracy alarms if alarm >10 minutes from now [KDE Bug 473792]

=== Version 3.6.0 (KDE Gear 23.08) --- 31 July 2023 ===
* Add a 'show today' control in the date picker [KDE Bug 470451]
* Improve Defer dialogue, provide dropdown for common delay intervals [KDE Bug 470451]
* Reduce empty space at bottom of calendar list.
* Use mouse wheel to increment/decrement the displayed month in date picker.
* Update alarm list for date picker selection when holiday region or work days are changed.
* Refactor access to holiday data.

=== Version 3.5.6 (KDE Gear 23.04.3) --- 6 June 2022 ===
* Fix memory leak every time an alarm is displayed [KDE Bug 468640]

=== Version 3.5.5 (KDE Gear 23.04) --- 30 December 2022 ===
* Disallow setting environment variables in command alarm command line.
* In Preferences dialog, if OK shows warning message, don't close dialog until user responds.
* Allow setting null command line for invoking terminal to run command alarms in.
* If only one standard command is available to invoke terminal to run command alarms in, use it as default.
* Show accuracy warning if short time-from-now specified in Edit Alarm dialogue [KDE Bug 463278]

=== Version 3.5.4 (KDE Gear 22.12.1) --- 29 December 2022 ===
* Update date picker display when a resource becomes disabled.
* Use KAlarm's default time zone to evaluate trigger times for working time alarms.
* Fix handling of quoted path if configured for the terminal for command alarms.
* Allow AM/PM control in Edit Alarm dialogue to be tabbed into [KDE Bug 463310]

=== Version 3.5.3 (KDE Gear 22.12) --- 18 November 2022 ===